WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116546
TextTrackRegion Not Implemented
https://bugs.webkit.org/show_bug.cgi?id=116546
Summary
TextTrackRegion Not Implemented
Brent Fulgham
Reported
2013-05-21 09:00:17 PDT
The Chromium team landed a partial implementation for the TextTrackRegion. From the original bug (see
https://bugs.webkit.org/show_bug.cgi?id=110511
): '... defined in the "WebVTT Extension: Regions for rendering cue groups":
https://dvcs.w3.org/hg/text-tracks/raw-file/default/608toVTT/region.html
' I noticed that this feature is disabled on all current WebKit ports (specifically on Apple's Windows and Mac ports). We should either activate this feature and begin testing it, or remove the code.
Attachments
Patch
(23.87 KB, patch)
2014-03-18 10:27 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(49.09 KB, patch)
2014-03-18 13:44 PDT
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
Patch
(23.48 KB, patch)
2014-03-18 16:55 PDT
,
Brent Fulgham
eric.carlson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-05-21 09:00:55 PDT
<
rdar://problem/13949553
>
Eric Carlson
Comment 2
2013-05-21 10:21:24 PDT
(In reply to
comment #0
)
> The Chromium team landed a partial implementation for the TextTrackRegion. From the original bug (see
https://bugs.webkit.org/show_bug.cgi?id=110511
): '... defined in the "WebVTT Extension: Regions for rendering cue groups": >
https://dvcs.w3.org/hg/text-tracks/raw-file/default/608toVTT/region.html
' > > I noticed that this feature is disabled on all current WebKit ports (specifically on Apple's Windows and Mac ports). > > We should either activate this feature and begin testing it, or remove the code.
This feature is still being actively developed in the Text CG, e.g.:
https://www.w3.org/Bugs/Public/show_bug.cgi?id=22121
https://www.w3.org/Bugs/Public/show_bug.cgi?id=22114
Brent Fulgham
Comment 3
2014-03-17 15:44:22 PDT
Merge in initial Blink test cases for WebVTT:
https://codereview.chromium.org/25798003
Brent Fulgham
Comment 4
2014-03-18 10:27:56 PDT
Created
attachment 227069
[details]
Patch
Eric Carlson
Comment 5
2014-03-18 10:37:55 PDT
Comment on
attachment 227069
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=227069&action=review
> LayoutTests/TestExpectations:-15 > -# pending implementation completion and feature enabling > -
webkit.org/b/109570
media/track/regions-webvtt [ Skip ]
Unless regions have been enabled in all builds, this will make the bots very sad.
Brent Fulgham
Comment 6
2014-03-18 10:39:22 PDT
(In reply to
comment #5
)
> (From update of
attachment 227069
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=227069&action=review
> > > LayoutTests/TestExpectations:-15 > > -# pending implementation completion and feature enabling > > -
webkit.org/b/109570
media/track/regions-webvtt [ Skip ] > > Unless regions have been enabled in all builds, this will make the bots very sad.
I'll back this out -- I mean to turn the tests on only at the end.
Brent Fulgham
Comment 7
2014-03-18 10:40:56 PDT
Committed
r165815
: <
http://trac.webkit.org/changeset/165815
>
WebKit Commit Bot
Comment 8
2014-03-18 11:53:43 PDT
Re-opened since this is blocked by
bug 130410
Brent Fulgham
Comment 9
2014-03-18 13:44:25 PDT
Created
attachment 227103
[details]
Patch
Brent Fulgham
Comment 10
2014-03-18 13:46:03 PDT
The VTT test failures were caused by a mistake I made when merging the WebVTTParser code. I'm rerunning tests with this fix and will post a patch shortly.
Brent Fulgham
Comment 11
2014-03-18 16:55:40 PDT
Created
attachment 227131
[details]
Patch
Brent Fulgham
Comment 12
2014-03-18 19:55:14 PDT
Committed
r165867
: <
http://trac.webkit.org/changeset/165867
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug