TextTrackRegion Not Implemented https://bugs.webkit.org/show_bug.cgi?id=116546

Reviewed by Eric Carlson.

Merged from Blink (patch by vcarbune@chromium.org):
https://chromium.googlesource.com/chromium/blink/+/4940f89a087fea5b5ea628e98d0b355d398a9eea
http://crbug.com/25798003

Source/WebCore:

Tests: media/track/regions-webvtt/text-track-region-display.html
       media/track/regions-webvtt/text-track-region-dom-layout.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::parseAttribute):
* html/track/LoadableTextTrack.cpp:
(WebCore::LoadableTextTrack::newRegionsAvailable):
* html/track/TextTrack.cpp:
* html/track/TextTrack.h:
* html/track/TextTrackRegion.cpp:
(WebCore::TextTrackRegion::TextTrackRegion):
(WebCore::TextTrackRegion::appendTextTrackCueBox):
* html/track/TextTrackRegion.h:
* html/track/VTTCue.cpp:
(WebCore::VTTCue::VTTCue):
(WebCore::VTTCue::notifyRegionWhenRemovingDisplayTree):
(WebCore::VTTCue::removeDisplayTree):
* html/track/VTTCue.h:
* html/track/WebVTTParser.cpp:
(WebCore::WebVTTParser::parseBytes):
(WebCore::WebVTTParser::collectMetadataHeader):
* html/track/WebVTTParser.h:

LayoutTests:

* media/track/captions-webvtt/captions-regions.vtt: Added.
* media/track/regions-webvtt/text-track-cue-region-attribute-expected.txt: Rebaseline.
* media/track/regions-webvtt/text-track-region-display-expected.txt: Added.
* media/track/regions-webvtt/text-track-region-display.html: Added.
* media/track/regions-webvtt/text-track-region-dom-layout-expected.txt: Added.
* media/track/regions-webvtt/text-track-region-dom-layout.html: Added.
* media/track/regions-webvtt/text-track-region-list-expected.txt: Rebaseline.
* media/track/regions-webvtt/text-track-region-parser-expected.txt: Rebaseline.


Canonical link: https://commits.webkit.org/148388@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165815 268f45cc-cd09-0410-ab3c-d52691b4dbfc