Source/WebCore/html/track/VTTCue.h
@@ -109,6 +109,7 @@ public:
 #if ENABLE(WEBVTT_REGIONS)
     const String& regionId() const { return m_regionId; }
     void setRegionId(const String&);
+    void notifyRegionWhenRemovingDisplayTree(bool);
 #endif
 
     virtual void setIsActive(bool);
@@ -216,6 +217,7 @@ private:
 #if ENABLE(WEBVTT_REGIONS)
     String m_regionId;
 #endif
+    bool m_notifyRegion;
 };
 
 VTTCue* toVTTCue(TextTrackCue*);
