Source/WebCore/html/track/WebVTTParser.h
@@ -100,9 +100,6 @@ public:
     enum ParseState {
         Initial,
         Header,
-#if ENABLE(WEBVTT_REGIONS)
-        Metadata,
-#endif
         Id,
         TimingsAndSettings,
         CueText,
@@ -169,7 +166,7 @@ private:
     void resetCueValues();
 
 #if ENABLE(WEBVTT_REGIONS)
-    void collectHeader(const String&);
+    void collectMetadataHeader(const String&);
     void createNewRegion();
 #endif
 
